@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: platform.h.in,v 1.48 2008/06/23 19:41:19 jinmei Exp $ */
+/* $Id: platform.h.in,v 1.49 2008/12/01 03:51:47 marka Exp $ */
 
 #ifndef ISC_PLATFORM_H
 #define ISC_PLATFORM_H 1
@@ -92,11 +92,6 @@
  * If this system needs inet_pton(), ISC_PLATFORM_NEEDPTON will be defined.
  */
 @ISC_PLATFORM_NEEDPTON@
-
-/*! \brief
- * If this system needs inet_aton(), ISC_PLATFORM_NEEDATON will be defined.
- */
-@ISC_PLATFORM_NEEDATON@
 
 /*! \brief
  * If this system needs in_port_t, ISC_PLATFORM_NEEDPORTT will be defined.
