@@ -1,3 +1,6 @@
+2503.	[port]		linux: improve compatibility with Linux Standard
+			Base. [RT #18793]
+
 2502.	[cleanup]	isc_radix: Improve compliance with coding style,
 			document function in <isc/radix.h>. [RT #18534]
 
